Update Tests & merge clean branch