@@ -1,10 +1,11 @@
 import static org.junit.jupiter.api.Assertions.*;
-import static controller.WordController.*;
-import static controller.IndexController.*; 
 
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 
+import controller.IndexController;
+import controller.ProgramController;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -20,30 +21,30 @@ public class IndexingTest {
 
     @Test
     public void IndexingFolder() {
-        addFolderToDatabase("TestDataBase");
+        IndexController indexController = ProgramController.getIndexController();
+        indexController.addFolderToDatabase("TestDataBase");
         HashSet<Data> expectedData = new HashSet<>();
         //file 1
-        expectedData.add(makeData(getStem("hessllo"), new HashSet<>(Arrays.asList(new String[]{"1"}))));
-        expectedData.add(makeData(getStem("dear"), new HashSet<>(Arrays.asList(new String[]{"1"}))));
-        expectedData.add(makeData(getStem("i"), new HashSet<>(Arrays.asList(new String[]{"1"}))));
-        expectedData.add(makeData(getStem("am"), new HashSet<>(Arrays.asList(new String[]{"1"}))));
-        expectedData.add(makeData(getStem("mohammad"), new HashSet<>(Arrays.asList(new String[]{"1"}))));
+        expectedData.add(makeData(getStem("hello"), new HashSet<>(List.of("1"))));
+        expectedData.add(makeData(getStem("dear"), new HashSet<>(List.of("1"))));
+        expectedData.add(makeData(getStem("i"), new HashSet<>(List.of("1"))));
+        expectedData.add(makeData(getStem("am"), new HashSet<>(List.of("1"))));
+        expectedData.add(makeData(getStem("mohammad"), new HashSet<>(List.of("1"))));
         //file 3
-        expectedData.add(makeData(getStem("man"), new HashSet<>(Arrays.asList(new String[]{"3"}))));
-        expectedData.add(makeData(getStem("sag"), new HashSet<>(Arrays.asList(new String[]{"3"}))));
-        expectedData.add(makeData(getStem("mikham"), new HashSet<>(Arrays.asList(new String[]{"3"}))));
-        expectedData.add(makeData(getStem("khoshgel"), new HashSet<>(Arrays.asList(new String[]{"3"}))));
-        expectedData.add(makeData(getStem("mikham"), new HashSet<>(Arrays.asList(new String[]{"3"}))));
-        expectedData.add(makeData(getStem("mio"), new HashSet<>(Arrays.asList(new String[]{"3"}))));
+        expectedData.add(makeData(getStem("man"), new HashSet<>(List.of("3"))));
+        expectedData.add(makeData(getStem("sag"), new HashSet<>(List.of("3"))));
+        expectedData.add(makeData(getStem("mikham"), new HashSet<>(List.of("3"))));
+        expectedData.add(makeData(getStem("khoshgel"), new HashSet<>(List.of("3"))));
+        expectedData.add(makeData(getStem("mikham"), new HashSet<>(List.of("3"))));
+        expectedData.add(makeData(getStem("mio"), new HashSet<>(List.of("3"))));
         //file 4
-        expectedData.add(makeData(getStem("mir"), new HashSet<>(Arrays.asList(new String[]{"4"}))));
-        expectedData.add(makeData(getStem("rafte"), new HashSet<>(Arrays.asList(new String[]{"4"}))));
-        expectedData.add(makeData(getStem("dubai"), new HashSet<>(Arrays.asList(new String[]{"4"}))));
-        expectedData.add(makeData(getStem("vase"), new HashSet<>(Arrays.asList(new String[]{"4"}))));
-        expectedData.add(makeData(getStem("nakhle"), new HashSet<>(Arrays.asList(new String[]{"4"}))));
-        expectedData.add(makeData(getStem("talaii"), new HashSet<>(Arrays.asList(new String[]{"4"}))));
-        assertTrue(expectedData.equals(Database.getData()));
-
+        expectedData.add(makeData(getStem("mir"), new HashSet<>(List.of("4"))));
+        expectedData.add(makeData(getStem("rafte"), new HashSet<>(List.of("4"))));
+        expectedData.add(makeData(getStem("dubai"), new HashSet<>(List.of("4"))));
+        expectedData.add(makeData(getStem("vase"), new HashSet<>(List.of("4"))));
+        expectedData.add(makeData(getStem("nakhle"), new HashSet<>(List.of("4"))));
+        expectedData.add(makeData(getStem("talaii"), new HashSet<>(List.of("4"))));
+        assertEquals(expectedData, Database.getData());
     }
 
     private Data makeData(String word, HashSet<String> fileNames) {
@@ -52,14 +53,19 @@ public class IndexingTest {
 
     @Test
     public void IndexingFile() {
-        addFileTextToDatabase("TestDataBase/1");
+        IndexController indexController = ProgramController.getIndexController();
+        indexController.addFileTextToDatabase("TestDataBase/1");
         HashSet<Data> expectedData = new HashSet<>();
-        expectedData.add(makeData(getStem("hello"), new HashSet<>(Arrays.asList(new String[]{"1"}))));
-        expectedData.add(makeData(getStem("dear"), new HashSet<>(Arrays.asList(new String[]{"1"}))));
-        expectedData.add(makeData(getStem("i"), new HashSet<>(Arrays.asList(new String[]{"1"}))));
-        expectedData.add(makeData(getStem("am"), new HashSet<>(Arrays.asList(new String[]{"1"}))));
-        expectedData.add(makeData(getStem("mohammad"), new HashSet<>(Arrays.asList(new String[]{"1"}))));
-        assertTrue(expectedData.equals(Database.getData()));
+        expectedData.add(makeData(getStem("hello"), new HashSet<>(List.of("1"))));
+        expectedData.add(makeData(getStem("dear"), new HashSet<>(List.of("1"))));
+        expectedData.add(makeData(getStem("i"), new HashSet<>(List.of("1"))));
+        expectedData.add(makeData(getStem("am"), new HashSet<>(List.of("1"))));
+        expectedData.add(makeData(getStem("mohammad"), new HashSet<>(List.of("1"))));
+        assertEquals(expectedData, Database.getData());
+    }
+
+    public String getStem(String word) {
+        return ProgramController.getWordController().getStem(word);
     }
 
 }
