@@ -3,8 +3,10 @@ import static controller.IndexController.*;
 
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 
 
+import controller.IndexController;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -16,6 +18,8 @@ import model.Database;
 
 public class SearchTest {
 
+    private IndexController indexController = ProgramController.getIndexController();
+
     @BeforeEach
     public void before() {
         Database.getData().clear();
@@ -23,13 +27,13 @@ public class SearchTest {
 
     @Test
     public void normalSearchTest() {
-        addFolderToDatabase("mamal");
-        Searcher searcher = ProgramController.getNormalSearcher();
+        indexController.addFolderToDatabase("mamal");
+        Searcher searcher = ProgramController.getSearcher();
         assertTrue(searcher.search("abbas").equals(new HashSet<String>()));
-        addFolderToDatabase("TestDataBase");
+        indexController.addFolderToDatabase("TestDataBase");
         assertEquals(searcher.search("mir"), new HashSet<>(Arrays.asList(new String[]{"4"})));
         assertEquals(searcher.search("mikham"), new HashSet<>(Arrays.asList(new String[]{"3"})));
-        addFolderToDatabase("TestDataBase2");
+        indexController.addFolderToDatabase("TestDataBase2");
         assertEquals(searcher.search("sag"), new HashSet<>(Arrays.asList(new String[]{"3", "gorbe"})));
         assertEquals(searcher.search("dubai"), new HashSet<>(Arrays.asList(new String[]{"4", "sag"})));
     }
@@ -37,25 +41,25 @@ public class SearchTest {
     @Test
     public void advancedSearchTest() {
         Searcher searcher = new AdvancedSearcher();
-        addFolderToDatabase("TestDataBase");
+        indexController.addFolderToDatabase("TestDataBase");
         assertTrue(searcher.search("mohammad -am").equals(new HashSet<String>()));
     }
 
     @Test
     public void advancedSearchTest2() {
         Searcher searcher = new AdvancedSearcher();
-        addFolderToDatabase("TestDataBase");
-        addFolderToDatabase("TestDataBase2");
+        indexController.addFolderToDatabase("TestDataBase");
+        indexController.addFolderToDatabase("TestDataBase2");
         Assertions.assertAll(
-            () -> assertTrue(assertEqual(searcher.search("mohammad -am"), (new HashSet<>(Arrays.asList("mohammad"))))),
-            () -> assertTrue(searcher.search("-amirraftKhonnashoonKhabeshMioomad").equals(new HashSet<>(Arrays.asList(new String[]{})))),
-            () -> assertTrue(searcher.search("taghi +mamooli -dubai").equals(new HashSet<String>())),
+            () -> assertTrue(assertEqual(searcher.search("mohammad -am"), (new HashSet<>(List.of("mohammad"))))),
+            () -> assertEquals(searcher.search("-amirraftKhonnashoonKhabeshMioomad"), new HashSet<>(Arrays.asList(new String[]{}))),
+            () -> assertEquals(searcher.search("taghi +mamooli -dubai"), new HashSet<String>()),
             () -> assertTrue(assertEqual(searcher.search("sag +mikham"), (new HashSet<>(Arrays.asList(new String[]{"3", "gorbe"}))))),
             () -> assertTrue(assertEqual(searcher.search("+sag -mikham"), (new HashSet<>(Arrays.asList(new String[]{"gorbe"}))))),
-            () -> assertTrue(searcher.search("+dubai").equals(new HashSet<>(Arrays.asList(new String[]{"sag", "4"})))),
-            () -> assertTrue(searcher.search("+dubai +talaii").equals(new HashSet<>(Arrays.asList(new String[]{"sag", "4"})))),
-            () -> assertTrue(searcher.search("mohammad -mikham +mohammad").equals(new HashSet<>(Arrays.asList(new String[]{"1", "mohammad"})))),
-            () -> assertTrue(searcher.search("abbas +rafte +dubai +sag -mikham -taghi").equals(new HashSet<>(Arrays.asList(new String[]{"4", "gorbe", "mohammad"}))))
+            () -> assertEquals(searcher.search("+dubai"), new HashSet<>(Arrays.asList(new String[]{"sag", "4"}))),
+            () -> assertEquals(searcher.search("+dubai +talaii"), new HashSet<>(Arrays.asList(new String[]{"sag", "4"}))),
+            () -> assertEquals(searcher.search("mohammad -mikham +mohammad"), new HashSet<>(Arrays.asList(new String[]{"1", "mohammad"}))),
+            () -> assertEquals(searcher.search("abbas +rafte +dubai +sag -mikham -taghi"), new HashSet<>(Arrays.asList(new String[]{"4", "gorbe", "mohammad"})))
         );   
     }
     private boolean assertEqual(HashSet<String> given, HashSet<String> expected){
